meta-arguments/depend_on/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {
    Name        = "my-igw"
    Environment = "testing"
  }
}
