meta-arguments/depend_on/security-group-rules.tf
resource "aws_security_group_rule" "ingress-http" {
  type              = "ingress"
  to_port           = 80
  from_port         = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow-http-ssh.id
}

resource "aws_security_group_rule" "ingress-ssh" {
  type              = "ingress"
  to_port           = 22
  from_port         = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow-http-ssh.id

}

resource "aws_security_group_rule" "egress-all" {
  type              = "egress"
  to_port           = 0
  from_port         = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow-http-ssh.id
}
